--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -73,8 +73,8 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           push: true
           tags: |
-            nocodb/nocodb-dev:${{ github.event.inputs.tag || inputs.tag }}
-            nocodb/nocodb-dev:latest
+            pranavxc/nocodb-dev:${{ github.event.inputs.tag || inputs.tag }}
+            pranavxc/nocodb-dev:latest
 
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
