--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -22,9 +22,8 @@ jobs:
         run: echo "NIGHTLY_BUILD_TAG=nocodb-dev-${{ env.CURRENT_DATE }}" >> $GITHUB_ENV
       - name: Verify the tag
         run: echo "${{ env.NIGHTLY_BUILD_TAG }}"
-  # Build docker image and push to docker hub
-  # release-docker:
-  #   needs: release-draft-note
-  #   uses: ./.github/workflows/release-docker.yml
-  #   with:
-  #     tag: ${{ github.event.inputs.tag ||  env.NIGHTLY_BUILD_TAG }}
+#   Build docker image and push to docker hub
+  release-docker:
+    uses: ./.github/workflows/release-docker.yml
+    with:
+      tag: ${{ github.event.inputs.tag ||  env.NIGHTLY_BUILD_TAG }}
