--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -17,12 +17,13 @@ jobs:
 #     if: (github.event_name == 'schedule')
     steps:
       - id: tag-step
-      - name: Get current date
-        run: echo "CURRENT_DATE=$(date +"%Y%m%d")"  >> $GITHUB_ENV
-      - name: Set the tag
-        run: echo "::set-output name=NIGHTLY_BUILD_TAG::nightly-${{ env.CURRENT_DATE }}"
-      - name: Verify the tag
-        run: echo "${{ env.NIGHTLY_BUILD_TAG }}"
+        run: |
+          # Get current date
+          echo "CURRENT_DATE=$(date +"%Y%m%d")"  >> $GITHUB_ENV
+          # Set the tag
+          echo "::set-output name=NIGHTLY_BUILD_TAG::nightly-${{ env.CURRENT_DATE }}"
+          # Verify the tag
+          echo "${{ env.NIGHTLY_BUILD_TAG }}"
 #   Build docker image and push to docker hub
   release-docker:
     uses: ./.github/workflows/release-docker.yml
