--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: verify
         run: |
-          echo ${{ jobs.set-tag.outputs.nightly_build_tag }}
+          echo ${{ steps.set-tag.outputs.nightly_build_tag }}
           echo ${{ needs.set-tag.outputs.nightly_build_tag }}
 #   Build docker image and push to docker hub
 #   release-docker:
