--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -28,20 +28,19 @@ jobs:
         run: echo ${{ steps.tag-step.outputs.NIGHTLY_BUILD_TAG }}
     outputs:
       nightly_build_tag: ${{ steps.tag-step.outputs.NIGHTLY_BUILD_TAG }}
-  verify-in-another-job:
-    runs-on: 'ubuntu-latest'
-    needs: set-tag
-    steps:
-      - name: verify
-        run: |
-          echo ${{ needs.set-tag.outputs.nightly_build_tag }}
+#   verify-in-another-job:
+#     runs-on: 'ubuntu-latest'
+#     needs: set-tag
+#     steps:
+#       - name: verify
+#         run: |
+#           echo ${{ needs.set-tag.outputs.nightly_build_tag }}
 #   Build docker image and push to docker hub
   release-docker:
     needs: set-tag
     uses: ./.github/workflows/release-docker.yml
     with:
-      tag: $ {{ needs.set-tag.outputs.nightly_build_tag }}
-#       tag: ${{ github.event.inputs.tag ||  needs.set-tag.outputs.nightly_build_tag }}
+      tag: ${{ github.event.inputs.tag || needs.set-tag.outputs.nightly_build_tag }}
     secrets:
       DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
       DOCKERHUB_TOKEN: "${{ secrets.DOCKERHUB_TOKEN }}"
