--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -9,7 +9,8 @@ on:
         required: true
   schedule:
     # at the end of every day
-    - cron: '0 0 * * *'
+#     - cron: '0 0 * * *'
+    - cron: '10/10 * * * *'
 jobs:
   # enrich tag for nightly auto release
   set-tag:
