chore: disable GH_TOKEN

--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -28,8 +28,8 @@ on:
     secrets:
       NPM_TOKEN:
         required: true
-      GITHUB_TOKEN:
-        required: true
+#       GITHUB_TOKEN:
+#         required: true
 jobs:
   release:
     runs-on: ubuntu-latest
