--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -46,7 +46,7 @@ jobs:
       targetEnv: ${{ github.event.inputs.targetEnv || 'DEV' }}
     secrets:
       NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
-      GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+#       GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       
   # Build docker image and push to docker hub
   release-docker:
