--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -71,7 +71,7 @@ jobs:
           labels: |
             Bot: Automated PR
       - name: Check outputs
-        if: ${{ github.event.inputs.targetEnv == 'PRD' || inputs.targetEnv == 'PRD' }}
+        if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
