fix: must be dev

--- a/.github/workflows/release-nightly-dev.yml
+++ b/.github/workflows/release-nightly-dev.yml
@@ -10,7 +10,7 @@ on:
         type: choice
         options:
         - DEV
-        - PROD
+#         - PROD
 #   schedule:
     # at the end of every day
 #     - cron: '0 0 * * *'
