--- a/.github/workflows/sync-to-develop.yml
+++ b/.github/workflows/sync-to-develop.yml
@@ -12,7 +12,7 @@ jobs:
       # See https://github.com/actions/checkout/issues/766
       - name: Workaround for unsafe repository issue
         run: |
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
  
       - name: Checkout
         uses: actions/checkout@v1
