--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -6,55 +6,86 @@ on:
     inputs:
       tag:
         description: "Target Tag"
-        required: true
+        required: false
       prev_tag:
         description: "Previous Tag"
-        required: true
-      targetEnv:
-        description: "Target Environment"
-        required: true
-        type: choice
-        options:
-#         - DEV
-        - PROD
+        required: false
 jobs:
+  # Validate Branch
+  validate-branch:
+    steps:
+      - run: |
+          if [[ ${{ github.ref }} != 'refs/heads/master' ]]; then
+            echo "NocoDB Release is only allowed to run on master branch"
+            exit 1
+          fi
+
+  # Process Input
+  process-input:
+    needs: validate-branch
+    steps:
+      - name: process-input
+        run: |
+          TARGET_TAG=${{github.event.inputs.tag}}
+          PREV_TAG=${{github.event.inputs.prev_tag}}
+
+          if [[ ${{ PREV_TAG }} == '' ]]; then
+            # fetch the latest version
+            PREV_TAG=$(basename $(curl -fs -o/dev/null -w %{redirect_url} https://github.com/nocodb/nocodb/releases/latest))
+          fi
+
+          if [[ ${{ TARGET_TAG }} == '' ]]; then
+            # bump the version from PREV_TAG
+            TARGET_TAG=$(echo ${PREV_TAG} | awk -F. -v OFS=. '{$NF += 1 ; print}')
+          fi
+          echo ${TARGET_TAG}
+          echo ${PREV_TAG}
+          echo "::set-output name=target_tag::${TARGET_TAG}"
+          echo "::set-output name=prev_tag::${PREV_TAG}"
+
+  # Merge develop to master
+  sync-to-master:
+    needs: process-input
+    uses: ./.github/workflows/sync-to-master.yml
+
   # Close all issues with target tags 'Fixed' & 'Resolved'
   close-fixed-issues:
+    needs: [sync-to-master, process-input]
     uses: ./.github/workflows/release-close-issue.yml
     with:
       issue_label: 'Status: Fixed'
-      version: ${{ github.event.inputs.tag }}
+      version: ${{ needs.process-input.outputs.target_tag }}
   close-resolved-issues:
-    needs: close-fixed-issues
+    needs: [close-fixed-issues, process-input]
     uses: ./.github/workflows/release-close-issue.yml
     with:
       issue_label: 'Status: Resolved'
-      version: ${{ github.event.inputs.tag }}
+      version: ${{ needs.process-input.outputs.target_tag }}
 
   # Build, install, publish frontend and backend to npm
   release-npm:
-    needs: close-resolved-issues
+    needs: [close-resolved-issues, process-input]
     uses: ./.github/workflows/release-npm.yml
     with:
-      tag: ${{ github.event.inputs.tag }}
+      tag: ${{ needs.process-input.outputs.target_tag }}
       targetEnv: ${{ github.event.inputs.targetEnv || 'PROD' }}
     secrets:
       NPM_TOKEN: "${{ secrets.NPM_TOKEN }}"
 
   # Draft Release Note
   release-draft-note:
-    needs: release-npm
+    needs: [release-npm, process-input]
     uses: ./.github/workflows/release-draft.yml
     with:
-      tag: ${{ github.event.inputs.tag }}
-      prev_tag: ${{ github.event.inputs.prev_tag }}
+      tag: ${{ needs.process-input.outputs.target_tag }}
+      prev_tag: ${{ needs.process-input.outputs.prev_tag }}
 
   # Build docker image and push to docker hub
   release-docker:
-    needs: release-draft-note
+    needs: [release-draft-note, process-input]
     uses: ./.github/workflows/release-docker.yml
     with:
-      tag: ${{ github.event.inputs.tag }}
+      tag: ${{ needs.process-input.outputs.target_tag }}
       targetEnv: ${{ github.event.inputs.targetEnv || 'PROD' }}
     secrets:
       DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
