--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   # Validate Branch
   validate-branch:
+    runs-on: ubuntu-latest
     steps:
       - run: |
           if [[ ${{ github.ref }} != 'refs/heads/master' ]]; then
@@ -22,6 +23,7 @@ jobs:
 
   # Process Input
   process-input:
+    runs-on: ubuntu-latest
     needs: validate-branch
     steps:
       - name: process-input
