--- a/.github/workflows/sync-to-master.yml
+++ b/.github/workflows/sync-to-master.yml
@@ -6,7 +6,7 @@ on:
   # Triggered by release-nocodb.yml
   workflow_call:
 jobs:
-  sync-to-develop:
+  sync-to-master:
     runs-on: ubuntu-latest
     steps:
       - run: |
