--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -50,7 +50,7 @@ jobs:
     needs: [process-input]
     uses: ./.github/workflows/pr-to-master.yml
     with:
-      tag: "${{ needs.process-input.outputs.target_tag }}"
+      tag: ${{ needs.process-input.outputs.target_tag }}
       targetEnv: ${{ github.event.inputs.targetEnv || 'PROD' }}
 
   # Close all issues with target tags 'Fixed' & 'Resolved'
