--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -25,8 +25,12 @@ jobs:
   process-input:
     runs-on: ubuntu-latest
     needs: validate-branch
+    outputs:
+      target_tag: ${{ steps.process-input.outputs.target_tag }}
+      prev_tag: ${{ steps.process-input.outputs.prev_tag }}
     steps:
-      - name: process-input
+      - id: process-input
+        name: process-input
         run: |
           TARGET_TAG=${{github.event.inputs.tag}}
           PREV_TAG=${{github.event.inputs.prev_tag}}
@@ -50,7 +54,7 @@ jobs:
 
   # Merge develop to master
   pr-to-master:
-    needs: [process-input]
+    needs: process-input
     uses: ./.github/workflows/pr-to-master.yml
     with:
       tag: ${{ needs.process-input.outputs.target_tag }}
