--- a/.github/workflows/pr-to-master.yml
+++ b/.github/workflows/pr-to-master.yml
@@ -32,37 +32,33 @@ jobs:
     steps:
       - run: |
           echo 'triggering pr-to-master'
-          echo ${{ github.event.inputs.tag }}
-          echo ${{ inputs.tag }}
-          echo ${{ github.event.inputs.tag || inputs.tag }}
-          echo ${{ github.event.inputs.targetEnv || inputs.targetEnv }}
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      #   with:
-      #     path: develop
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: develop
 
-      # - name: Create Pull Request
-      #   if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
-      #   id: cpr
-      #   uses: peter-evans/create-pull-request@v3
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     signoff: true
-      #     base: 'master'
-      #     branch: 'release/${{ github.event.inputs.tag || inputs.tag }}'
-      #     delete-branch: true
-      #     title: '${{ github.event.inputs.tag || inputs.tag }} Pre-release'
-      #     labels: |
-      #       Bot: Automated PR
-      # - name: Check outputs
-      #   if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
-      #   run: |
-      #     echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
-      #     echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
-      # - name: automerge
-      #   if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
-      #   uses: "pascalgn/automerge-action@v0.14.3"
-      #   env:
-      #      GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      #      PULL_REQUEST: "${{ steps.cpr.outputs.pull-request-number }}"
+      - name: Create Pull Request
+        if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
+        id: cpr
+        uses: peter-evans/create-pull-request@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          signoff: true
+          base: 'master'
+          branch: 'release/${{ github.event.inputs.tag || inputs.tag }}'
+          delete-branch: true
+          title: '${{ github.event.inputs.tag || inputs.tag }} Pre-release'
+          labels: |
+            Bot: Automated PR
+      - name: Check outputs
+        if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
+        run: |
+          echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+          echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
+      - name: automerge
+        if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
+        uses: "pascalgn/automerge-action@v0.14.3"
+        env:
+           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+           PULL_REQUEST: "${{ steps.cpr.outputs.pull-request-number }}"
