--- a/.github/workflows/pr-to-master.yml
+++ b/.github/workflows/pr-to-master.yml
@@ -45,8 +45,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           signoff: true
-          branch: 'release/${{ github.event.inputs.tag || inputs.tag }}'
-          delete-branch: true
+          base: master
+          branch: develop
+          # branch: 'release/${{ github.event.inputs.tag || inputs.tag }}'
+          # delete-branch: true
           title: '${{ github.event.inputs.tag || inputs.tag }} Pre-release'
           labels: |
             Bot: Automated PR
