--- a/.github/workflows/pr-to-master.yml
+++ b/.github/workflows/pr-to-master.yml
@@ -47,7 +47,7 @@ jobs:
           source_branch: "develop"
           destination_branch: "master"  
           pr_title: '${{ github.event.inputs.tag || inputs.tag }} Pre-release'
-          pr_label: 'Bot: Automated PR'
+          pr_label: 'Bot: Automated PR, Bot: Automerge'
       - name: Check outputs
         if: ${{ github.event.inputs.targetEnv == 'PROD' || inputs.targetEnv == 'PROD' }}
         run: |
@@ -59,3 +59,4 @@ jobs:
         env:
            GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
            PULL_REQUEST: "${{ steps.cpr.outputs.pr_number }}"
+           MERGE_LABELS: "Bot: Automerge"
