--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -30,18 +30,18 @@ jobs:
           echo 'triggering release-draft'
           echo ${{ github.event.inputs.tag || inputs.tag }}
           echo ${{ github.event.inputs.prev_tag || inputs.prev_tag }}
-    # steps:
-    #   - name: Create tag
-    #     uses: actions/github-script@v3
-    #     with:
-    #       github-token: ${{ secrets.GITHUB_TOKEN }}
-    #       script: |
-    #         github.git.createRef({
-    #           owner: context.repo.owner,
-    #           repo: context.repo.repo,
-    #           ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
-    #           sha: context.sha
-    #         })
+          
+      - name: Create tag
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
+              sha: context.sha
+            })
 
     #   - uses: actions/checkout@v2
     #     with:
