--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -16,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
+          echo ${{ github.ref }}
+          echo $GITHUB_REF
           if [[ ${{ github.ref }} != 'refs/heads/master' ]]; then
             echo "NocoDB Release is only allowed to run on master branch"
             exit 1
