--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -19,6 +19,7 @@ jobs:
           echo ${{ github.ref }}
           echo $GITHUB_REF
           echo "${GITHUB_REF##*/}"
+          echo ${{github.ref_name}}
           if [[ ${{ github.ref }} != 'refs/heads/master' ]]; then
             echo "NocoDB Release is only allowed to run on master branch"
             exit 1
