--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -33,30 +33,32 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo 'triggering release-npm'
-#     env:
-#       working-directory: ./packages/nocodb
-#     strategy:
-#       matrix:
-#         node-version: [12]
 #     steps:
-#       - uses: actions/checkout@v2
-#       # Setup .npmrc file to publish to npm
-#       - uses: actions/setup-node@v2
-#         with:
-#           node-version: '16.x'
-#           registry-url: 'https://registry.npmjs.org'
 #       - run: |
-#           cd packages/nc-gui
-#           npm install
-#           targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} npm run build:copy:jsdeliver
-#           cd ../..
-#           npm install
-#           targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} node scripts/upgradeNcGui.js && cd packages/nocodb && npm run obfuscate:build:publish
-#         env:
-#           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#           echo 'triggering release-npm'
+    env:
+      working-directory: ./packages/nocodb
+    strategy:
+      matrix:
+        node-version: [12]
+    steps:
+      - uses: actions/checkout@v2
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: |
+          cd packages/nc-gui && 
+          npm install &&
+          targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} npm run build:copy &&
+          # targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} npm run build:copy:jsdeliver &&
+          cd ../.. &&
+          npm install &&
+          targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} node scripts/upgradeNcGui.js && cd packages/nocodb && npm i
+          #targetEnv=${{ github.event.inputs.targetEnv || inputs.targetEnv }} targetVersion=${{ github.event.inputs.tag || inputs.tag }} node scripts/upgradeNcGui.js && cd packages/nocodb && npm run obfuscate:build:publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 #       - name: Create Pull Request
 #         if: ${{ github.event.inputs.targetEnv == 'PRD' || inputs.targetEnv == 'PRD' }}
 #         id: cpr
